# oxsci-mcp-scaffold

./: .gitignore  Dockerfile  README.md  entrypoint-dev.sh  install.py  pyproject.toml  setup.py  start.sh
.github/workflows/: docker-builder.yml  version-management.yml
app/core/: config.py  main.py
app/tools/: __init__.py  example_data_service_tool.py  example_tool.py  pdf_section_saver.py  tool_template.py
docs/: TOOL_DEVELOPMENT.md
tests/: test_example.py
